load("//bzl:rules.bzl",
     "compiler_library",
     "compiler_module",
     "compiler_signature",
)

MODULE_OPTS = []
SIG_OPTS    = []

# compiler_library(
#     name = "middle_end",
#     manifest  = [
#         ":Backend_var",
#         ":Clambda",
#         ":Clambda_primitives",
#         ":Compilation_unit",
#         ":Compilenv",
#         ":Convert_primitives",
#         ":Internal_variable_names",
#         ":Linkage_name",
#         ":Printclambda",
#         ":Printclambda_primitives",
#         ":Semantics_of_primitives",
#         ":Symbol",
#         ":Variable",

#         ":Backend_intf_cmi",
#     ],
# )

## defined in compilerlibs/Makefile.compilerlibs
## //asmcomp:ocamloptcomp (archive) needs it as a lib, not an archive
## //tools:ocamlobjinfo (executable)
compiler_library(
    name = "ocamlmiddleend",
    archivable = False,
    manifest  = [
        ## NB: the makefiles take pains to put stuff in order, across
        ## pkg boundaries in some cases. OBazl doesn't need that, so
        ## long as each target lists its direct deps. So we can list
        ## targets from any packages, in alpha order, and OBazl will
        ## put them in dependency order.

        ":Internal_variable_names",
        ":Linkage_name",
        ":Compilation_unit",
        ":Variable",
        # flambda stuff..
        ":Symbol",
        ":Backend_var",
        ":Clambda_primitives",
        ":Printclambda_primitives",
        ":Clambda",
        ":Printclambda",
        ":Semantics_of_primitives",
        ":Convert_primitives",
        # flambda stuff
        ":Compilenv",

        ## includes all flambda deps, inline and $(MIDDLE_END_FLAMBDA)
        "//middle_end/flambda:ocamloptcomp",

        # $(MIDDLE_END_CLOSURE)
        "//middle_end/closure:Closure",
        "//middle_end/closure:Closure_middle_end",

        # ":Backend_intf_cmi",
    ],
    visibility = [
        # "//compilerlibs:__pkg__",
        # "//tools:__pkg__",
        "//visibility:public"
    ]
)

################################################################
compiler_signature(
    name = "Backend_intf_cmi",
    src  = "backend_intf.mli",
    opts = SIG_OPTS,
    deps   = [
        "//middle_end/flambda/base_types:Closure_id_cmi",
        "//middle_end/flambda:Simple_value_approx_cmi",
        "//typing:Ident_cmi",
        ":Symbol_cmi",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//driver:__pkg__",
        "//middle_end:__subpackages__"
        # "//toplevel/native:__pkg__"
    ]
)

compiler_module(
    name   = "Backend_var",
    struct = "backend_var.ml",
    sig    = "Backend_var_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Debuginfo",
        "//typing:Ident",
        "//typing:Path",
        "//utils:Clflags",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format",
    ],
    visibility = [
        "//asmcomp:__subpackages__",
        "//middle_end:__subpackages__",
        "//testsuite:__subpackages__"
    ]
)

compiler_signature(
    name = "Backend_var_cmi",
    src  = "backend_var.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Debuginfo_cmi",
        "//typing:Ident_cmi",
        "//typing:Path_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//testsuite:__subpackages__"
    ]
)

compiler_module(
    name   = "Clambda",
    struct = "clambda.ml",
    sig    = "Clambda_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Debuginfo",
        "//typing:Ident",
        "//typing:Path",
        ":Backend_var",
        ":Clambda_primitives",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Int32",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.String",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//middle_end:__subpackages__"
    ]
)

compiler_signature(
    name = "Clambda_cmi",
    src  = "clambda.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Debuginfo_cmi",
        "//parsing:Asttypes_cmi",
        "//typing:Ident_cmi",
        "//typing:Path_cmi",
        ":Backend_var_cmi",
        ":Clambda_primitives_cmi",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//file_formats:__pkg__",
        "//middle_end:__subpackages__",
    ]
)

compiler_module(
    name   = "Clambda_primitives",
    struct = "clambda_primitives.ml",
    sig    = "Clambda_primitives_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Lambda",
        "//typing:Primitive",
        "//typing:Types",
    ],
    stdlib_deps = [
        "//stdlib:Primitives",
    ],
    visibility = ["//middle_end:__subpackages__"]
)

compiler_signature(
    name = "Clambda_primitives_cmi",
    src  = "clambda_primitives.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Lambda_cmi",
        "//parsing:Asttypes_cmi",
        "//typing:Primitive_cmi",
        "//typing:Types_cmi",
    ],
    visibility = ["//middle_end/flambda:__pkg__"]
)

compiler_module(
    name   = "Compilation_unit",
    struct = "compilation_unit.ml",
    sig    = "Compilation_unit_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//typing:Ident",
        "//utils:Identifiable",
        "//utils:Int_replace_polymorphic_compare",
        "//utils:Misc",
        ":Linkage_name",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.String",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//middle_end/flambda:__subpackages__",
        "//tools:__pkg__",
    ]
)

compiler_signature(
    name = "Compilation_unit_cmi",
    src  = "compilation_unit.mli",
    opts = SIG_OPTS,
    deps   = [
        "//typing:Ident_cmi",
        "//utils:Identifiable_cmi",
        ":Linkage_name_cmi",
    ],
    visibility = [
        "//middle_end/flambda:__pkg__",
        "//middle_end/flambda/base_types:__pkg__"
    ]
)

compiler_module(
    name   = "Compilenv",
    struct = "compilenv.ml",
    sig    = "Compilenv_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//config:Config",
        "//middle_end/flambda/base_types:Closure_id",
        "//middle_end/flambda:Export_info",
        "//parsing:Location",
        "//typing:Env",
        "//typing:Ident",
        "//typing:Path",
        "//utils:Clflags",
        "//utils:Load_path",
        "//utils:Misc",
        "//utils:Warnings",
        ":Clambda",
        ":Compilation_unit",
        ":Linkage_name",
        ":Symbol",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Buffer",
        "//stdlib:Stdlib.Digest",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Map",
        "//stdlib:Stdlib.String",
    ],
    visibility = [
        "//asmcomp:__subpackages__",
        "//driver:__pkg__",
        "//middle_end:__subpackages__",
        "//testsuite:__subpackages__",
        "//toplevel/native:__pkg__"
    ]
)

compiler_signature(
    name = "Compilenv_cmi",
    src  = "compilenv.mli",
    opts = SIG_OPTS,
    deps   = [
        "//file_formats:Cmx_format_cmi",
        "//middle_end/flambda/base_types:Closure_id_cmi",
        "//middle_end/flambda:Export_info_cmi",
        "//typing:Ident_cmi",
        ":Clambda_cmi",
        ":Compilation_unit_cmi",
        ":Linkage_name_cmi",
        ":Symbol_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Digest_cmi",
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Convert_primitives",
    struct = "convert_primitives.ml",
    sig    = "Convert_primitives_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Printlambda",
        "//utils:Misc",
        ":Clambda_primitives", ## (Middle_end Clambda_primitives)
    ],
    visibility = ["//middle_end:__subpackages__"]
)

compiler_signature(
    name = "Convert_primitives_cmi",
    src  = "convert_primitives.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Asttypes_cmi",
        ":Clambda_primitives_cmi",
    ],
)

compiler_module(
    name   = "Internal_variable_names",
    struct = "internal_variable_names.ml",
    sig    = "Internal_variable_names_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Debuginfo",
        "//lambda:Lambda",
        "//parsing:Location",
        "//utils:Int_replace_polymorphic_compare",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
    ],
    visibility = ["//middle_end/flambda:__pkg__"]
)

compiler_signature(
    name = "Internal_variable_names_cmi",
    src  = "internal_variable_names.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Lambda_cmi"
    ],
    visibility = [
        "//middle_end/flambda:__subpackages__",
        # "//otherlibs/dynlink:__pkg__"
    ]
)

compiler_module(
    name   = "Linkage_name",
    struct = "linkage_name.ml",
    sig    = "Linkage_name_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//utils:Identifiable",
        "//utils:Int_replace_polymorphic_compare",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.String",
    ],
    visibility = [
        "//middle_end/flambda:__pkg__",
        "//tools:__pkg__",
    ]
)

compiler_signature(
    name = "Linkage_name_cmi",
    src  = "linkage_name.mli",
    opts = SIG_OPTS,
    deps   = [
        "//utils:Identifiable_cmi"
    ],
)

compiler_module(
    name   = "Printclambda",
    struct = "printclambda.ml",
    sig    = "Printclambda_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Printlambda",
        "//typing:Ident",
        ":Backend_var", ## (Middle_end Backend_var)
        ":Clambda", ## (Middle_end Clambda)
        ":Printclambda_primitives", ## (Middle_end Printclambda_primitives)
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.String",
    ],
    visibility = [
        "//middle_end:__subpackages__",
        "//tools:__pkg__",
    ]
)

compiler_signature(
    name = "Printclambda_cmi",
    src  = "printclambda.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Clambda_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Printclambda_primitives",
    struct = "printclambda_primitives.ml",
    sig    = "Printclambda_primitives_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Debuginfo",
        "//lambda:Lambda",
        "//lambda:Printlambda",
        "//middle_end:Clambda_primitives",
        "//typing:Primitive",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Printf",
    ],
    visibility = ["//middle_end/flambda:__pkg__"]
)

compiler_signature(
    name = "Printclambda_primitives_cmi",
    src  = "printclambda_primitives.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Asttypes_cmi",
        ":Clambda_primitives_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Semantics_of_primitives",
    struct = "semantics_of_primitives.ml",
    sig    = "Semantics_of_primitives_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Clambda_primitives",
    ],
    visibility = ["//middle_end:__subpackages__"]
)

compiler_signature(
    name = "Semantics_of_primitives_cmi",
    src  = "semantics_of_primitives.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Asttypes_cmi",
        ":Clambda_primitives_cmi",
    ],
)

compiler_module(
    name   = "Symbol",
    struct = "symbol.ml",
    sig    = "Symbol_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//utils:Identifiable",
        "//utils:Int_replace_polymorphic_compare",
        "//utils:Misc",
        ":Compilation_unit",
        ":Linkage_name",
        ":Variable",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format",
    ],
    visibility = [
        "//middle_end/flambda:__pkg__",
        "//tools:__pkg__",
    ]
)

compiler_signature(
    name = "Symbol_cmi",
    src  = "symbol.mli",
    opts = SIG_OPTS,
    deps   = [
        "//utils:Identifiable_cmi",
        ":Compilation_unit_cmi",
        ":Linkage_name_cmi",
        ":Variable_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ],
    visibility = ["//middle_end/flambda:__pkg__"]
)

compiler_module(
    name   = "Variable",
    struct = "variable.ml",
    sig    = "Variable_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//typing:Ident",
        "//utils:Identifiable",
        "//utils:Int_replace_polymorphic_compare",
        "//utils:Misc",
        ":Compilation_unit",
        ":Internal_variable_names",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.List",
    ],
    visibility = ["//middle_end/flambda:__subpackages__"]
)

compiler_signature(
    name = "Variable_cmi",
    src  = "variable.mli",
    opts = SIG_OPTS,
    deps   = [
        "//typing:Ident_cmi",
        "//utils:Identifiable_cmi",
        ":Compilation_unit_cmi",
        ":Internal_variable_names_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ],
    visibility = ["//middle_end/flambda:__subpackages__"]
)

